--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@
             padding: 20px;
             color: #e0e0e0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
         }
